blackpanther-definition.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: blackpanther
  name: blackpanther
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blackpanther
  template:
    metadata:
      labels:
        app: blackpanther
    spec:
      containers:
      - image: blackpanther:latest
        name: blackpanther
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: blackpanther
  namespace: default
spec:
  selector:
    app: blackpanther
  type: ClusterIP
  ports:
  - name: blackpanther
    protocol: TCP
    port: 4002
    targetPort: 4002
