falcon-definition.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: falcon
  name: falcon
spec:
  replicas: 1
  selector:
    matchLabels:
      app: falcon
  template:
    metadata:
      labels:
        app: falcon
    spec:
      containers:
      - image: falcon:latest
        name: falcon
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: falcon
  namespace: default
spec:
  selector:
    app: falcon
  type: ClusterIP
  ports:
  - name: falcon
    protocol: TCP
    port: 4002
    targetPort: 4002
