galactus-definition.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: galactus
  name: galactus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: galactus
  template:
    metadata:
      labels:
        app: galactus
    spec:
      containers:
      - image: galactus:latest
        name: galactus
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: galactus
  namespace: default
spec:
  selector:
    app: galactus
  type: ClusterIP
  ports:
  - name: galactus
    protocol: TCP
    port: 4002
    targetPort: 4002
