hulk-definition.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hulk
  name: hulk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hulk
  template:
    metadata:
      labels:
        app: hulk
    spec:
      containers:
      - image: hulk:latest
        name: hulk
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: hulk
  namespace: default
spec:
  selector:
    app: hulk
  type: ClusterIP
  ports:
  - name: hulk
    protocol: TCP
    port: 4002
    targetPort: 4002
