humantorch-definition.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: humantorch
  name: humantorch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: humantorch
  template:
    metadata:
      labels:
        app: humantorch
    spec:
      containers:
      - image: humantorch:latest
        name: humantorch
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: humantorch
  namespace: default
spec:
  selector:
    app: humantorch
  type: ClusterIP
  ports:
  - name: humantorch
    protocol: TCP
    port: 4002
    targetPort: 4002
