ironman-definition.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ironman
  name: ironman
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ironman
  template:
    metadata:
      labels:
        app: ironman
    spec:
      containers:
      - image: ironman:latest
        name: ironman
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: ironman
  namespace: default
spec:
  selector:
    app: ironman
  type: ClusterIP
  ports:
  - name: ironman
    protocol: TCP
    port: 4002
    targetPort: 4002
