redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis-server
  name: redis-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis-server
  template:
    metadata:
      labels:
        app: redis-server
    spec:
      containers:
      - image: redis
        name: redis-server
---
apiVersion: v1
kind: Service
metadata:
  name: redis-server
  namespace: default
spec:
  selector:
    app: redis-server
  type: ClusterIP
  ports:
  - name: redis-server
    protocol: TCP
    port: 6379
    targetPort: 6379
