thanos-definition.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: thanos
  name: thanos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thanos
  template:
    metadata:
      labels:
        app: thanos
    spec:
      containers:
      - image: thanos:latest
        name: thanos
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: thanos
  namespace: default
spec:
  selector:
    app: thanos
  type: ClusterIP
  ports:
  - name: thanos
    protocol: TCP
    port: 4002
    targetPort: 4002
