thor-definition.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: thor
  name: thor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: thor
  template:
    metadata:
      labels:
        app: thor
    spec:
      containers:
      - image: thor:latest
        name: thor
        imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: thor
  namespace: default
spec:
  selector:
    app: thor
  type: ClusterIP
  ports:
  - name: thor
    protocol: TCP
    port: 4002
    targetPort: 4002
